--- a/budget.html
+++ b/budget.html
@@ -1,1 +1,34 @@
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+
+  <!-- Yeni Hesap Kartı -->
+  <div class="rounded-3xl border border-white/10 bg-white/5 p-6 backdrop-blur-xl">
+    <h2 class="text-lg font-semibold mb-4">Yeni Hesap Ekle</h2>
+
+    <label class="text-sm text-slate-300">Hesap Adı</label>
+    <input id="accountName" type="text" placeholder="Örn: Garanti Bankası"
+      class="w-full mt-2 mb-4 rounded-2xl border border-white/10 bg-slate-950/40 px-4 py-3 text-slate-100 placeholder:text-slate-500 outline-none focus:ring-4 focus:ring-emerald-400/10 focus:border-emerald-400/40">
+
+    <label class="text-sm text-slate-300">Başlangıç Bakiyesi (₺)</label>
+    <input id="accountBalance" type="number" placeholder="Örn: 25000"
+      class="w-full mt-2 mb-4 rounded-2xl border border-white/10 bg-slate-950/40 px-4 py-3 text-slate-100 placeholder:text-slate-500 outline-none focus:ring-4 focus:ring-emerald-400/10 focus:border-emerald-400/40">
+
+    <button onclick="addAccount()"
+      class="w-full rounded-2xl bg-emerald-500 px-4 py-3 font-semibold text-slate-950 shadow-lg shadow-emerald-500/20 hover:bg-emerald-400 active:translate-y-[1px]">
+      Hesap Ekle
+    </button>
+
+    <p id="accError" class="hidden mt-4 rounded-2xl border border-rose-500/20 bg-rose-500/10 px-4 py-3 text-sm text-rose-200"></p>
+  </div>
+
+  <!-- Hesap Listesi -->
+  <div class="lg:col-span-2 rounded-3xl border border-white/10 bg-white/5 p-6 backdrop-blur-xl">
+    <div class="flex items-center justify-between">
+      <h2 class="text-lg font-semibold">Hesaplarım</h2>
+      <span id="accCount" class="text-xs text-slate-400"></span>
+    </div>
+
+    <div id="accountsList" class="mt-4 space-y-3"></div>
+  </div>
+
+</div>
 
